--- a/src/App.css
+++ b/src/App.css
@@ -6,7 +6,9 @@
   height: 40vmin;
   pointer-events: none;
 }
-
+.main-wrapper {
+  margin: 20px 0px;
+}
 @media (prefers-reduced-motion: no-preference) {
   .App-logo {
     animation: App-logo-spin infinite 20s linear;
